Added Jwt Authentication

--- a/src/ProductManagement.API/appsettings.json
+++ b/src/ProductManagement.API/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ACER\\Development;Database=ProductManagementDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
+  "Jwt": {
+    "Key": "YourVerySecureKeyThatIsAtLeast32CharactersLong1234567890",
+    "Issuer": "YourApp",
+    "Audience": "YourAppUsers"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
