--- a/src/ProductManagement.API.Tests/ProductManagement.API.Tests.csproj
+++ b/src/ProductManagement.API.Tests/ProductManagement.API.Tests.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.19" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.19" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
@@ -21,6 +22,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+<ItemGroup>
+  <InternalsVisibleTo Include="ProductManagement.API.Tests" />
+</ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ProductManagement.API\ProductManagement.API.csproj" />
