--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,22 +1,19 @@
-version: '3.9'
-
 services:
   db:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: product_db
     environment:
-      SA_PASSWORD: "StrongPass#123"   # Must meet complexity requirements
+      SA_PASSWORD: "StrongPass#123"
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
-    healthcheck:
-      test: ["CMD", "/opt/mssql-tools/bin/sqlcmd", "-S", "localhost", "-U", "sa", "-P", "StrongPass#123", "-Q", "SELECT 1"]
-      interval: 10s
-      retries: 5
-      timeout: 5s
     volumes:
-      - db_data:/var/opt/mssql       # persist DB data
-      - ./init-db:/docker-entrypoint-initdb.d # optional init scripts
+      - ./sql:/docker-entrypoint-initdb.d   # initialization scripts
+    healthcheck:
+      test: ["CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P StrongPass#123 -Q 'SELECT 1'"]
+      interval: 10s
+      retries: 10
+      start_period: 20s
 
   api:
     build:
@@ -27,10 +24,6 @@ services:
       db:
         condition: service_healthy
     environment:
-      ASPNETCORE_ENVIRONMENT: Production
-      ConnectionStrings__DefaultConnection: "Server=db;Database=ProductDB;User Id=sa;Password=StrongPass#123;TrustServerCertificate=True"
+      ConnectionStrings__DefaultConnection: "Server=db;Database=ProductDB;User Id=sa;Password=StrongPass#123;TrustServerCertificate=true;"
     ports:
       - "5000:80"
-
-volumes:
-  db_data:
